--- a/src/main/resources/com/cameronm/scheduleconsult/fxml/MainScreen.fxml
+++ b/src/main/resources/com/cameronm/scheduleconsult/fxml/MainScreen.fxml
@@ -53,16 +53,16 @@
                            <center>
                               <TableView fx:id="appointmentTableView" focusTraversable="false" prefHeight="576.0" prefWidth="1255.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
                                 <columns>
-                                  <TableColumn fx:id="idAppointmentTableColumn" editable="false" prefWidth="49.33331298828125" text="Appointment ID" />
-                                    <TableColumn fx:id="titleAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="228.0" text="Title" />
-                                    <TableColumn fx:id="descriptionAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="343.99993896484375" text="Description" />
+                                  <TableColumn fx:id="idAppointmentTableColumn" editable="false" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Appointment ID" />
+                                    <TableColumn fx:id="titleAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="228.0" text="Title" />
+                                    <TableColumn fx:id="descriptionAppointmentTableColumn" editable="false" minWidth="130.0" prefWidth="343.99993896484375" text="Description" />
                                     <TableColumn fx:id="locationAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="256.666748046875" text="Location" />
                                     <TableColumn fx:id="contactAppointmentTableColumn" editable="false" minWidth="-Infinity" prefWidth="160.0" text="Contact" />
                                     <TableColumn fx:id="typeAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="228.0" text="Type" />
-                                    <TableColumn fx:id="startAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="136.66650390625" text="Start Date &amp; Time" />
-                                    <TableColumn fx:id="endAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="90.666748046875" text="End Date &amp; Time" />
-                                    <TableColumn fx:id="customerIdAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="115.3333740234375" text="Customer ID" />
-                                    <TableColumn fx:id="userIdAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="82.0" text="User ID" />
+                                    <TableColumn fx:id="startAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="200.0" text="Start Date &amp; Time" />
+                                    <TableColumn fx:id="endAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="200.0" text="End Date &amp; Time" />
+                                    <TableColumn fx:id="customerIdAppointmentTableColumn" editable="false" maxWidth="84.0" minWidth="84.0" prefWidth="84.0" text="Customer ID" />
+                                    <TableColumn fx:id="userIdAppointmentTableColumn" editable="false" maxWidth="70.0" minWidth="70.0" prefWidth="70.0" text="User ID" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
