--- a/src/main/resources/com/cameronm/scheduleconsult/fxml/ReportsScreen.fxml
+++ b/src/main/resources/com/cameronm/scheduleconsult/fxml/ReportsScreen.fxml
@@ -26,9 +26,24 @@
                         <Insets bottom="20.0" left="20.0" right="20.0" />
                      </padding>
                      <font>
-                        <Font name="Source Code Pro Black" size="17.0" />
+                        <Font name="Courier New" size="17.0" />
                      </font>
                   </TextArea>
+                  <Label layoutX="30.0" layoutY="32.0" prefHeight="24.0" prefWidth="91.0" text="Date">
+                     <font>
+                        <Font name="Courier New Bold" size="21.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="204.0" layoutY="32.0" prefHeight="24.0" prefWidth="91.0" text="Type">
+                     <font>
+                        <Font name="Courier New Bold" size="21.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="513.0" layoutY="32.0" prefHeight="24.0" prefWidth="91.0" text="Total">
+                     <font>
+                        <Font name="Courier New Bold" size="21.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
          </content>
@@ -45,17 +60,17 @@
                         <Insets bottom="20.0" left="20.0" right="20.0" />
                      </padding>
                      <font>
-                        <Font name="Source Code Pro Black" size="14.0" />
+                        <Font name="Courier New" size="14.0" />
                      </font>
                   </TextArea>
-                  <Label layoutX="30.0" layoutY="64.0" prefHeight="35.0" prefWidth="317.0" text="Appointment Schedule by Contact">
+                  <Label layoutX="30.0" layoutY="64.0" prefHeight="35.0" prefWidth="366.0" text="Appointment Schedule by Contact">
                      <font>
-                        <Font name="Source Serif Pro Black" size="19.0" />
+                        <Font name="Courier New Bold" size="19.0" />
                      </font>
                   </Label>
                   <Label alignment="CENTER_RIGHT" layoutY="25.0" prefHeight="19.0" prefWidth="89.0" text="Contact:">
                      <font>
-                        <Font name="Source Serif Pro Black" size="13.0" />
+                        <Font name="Courier New Bold" size="13.0" />
                      </font>
                      <padding>
                         <Insets right="5.0" />
@@ -78,17 +93,17 @@
                         <Insets bottom="20.0" left="20.0" right="20.0" />
                      </padding>
                      <font>
-                        <Font name="Source Code Pro Black" size="14.0" />
+                        <Font name="Courier New" size="14.0" />
                      </font>
                   </TextArea>
-                  <Label layoutX="30.0" layoutY="64.0" prefHeight="35.0" prefWidth="296.0" text="Appointments Modified by User">
+                  <Label layoutX="30.0" layoutY="64.0" prefHeight="35.0" prefWidth="354.0" text="Appointments Modified by User">
                      <font>
-                        <Font name="Source Serif Pro Black" size="19.0" />
+                        <Font name="Courier New Bold" size="19.0" />
                      </font>
                   </Label>
                   <Label alignment="CENTER_RIGHT" layoutX="1.0" layoutY="25.0" prefHeight="19.0" prefWidth="67.0" text="User:">
                      <font>
-                        <Font name="Source Serif Pro Black" size="13.0" />
+                        <Font name="Courier New Bold" size="13.0" />
                      </font>
                      <padding>
                         <Insets right="5.0" />
@@ -111,7 +126,7 @@
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </padding>
                      <font>
-                        <Font name="Source Code Pro Black" size="15.0" />
+                        <Font name="Courier New" size="15.0" />
                      </font>
                   </TextArea>
                </children>
