--- a/src/main/resources/com/cameronm/scheduleconsult/fxml/AppointmentEntryScreen.fxml
+++ b/src/main/resources/com/cameronm/scheduleconsult/fxml/AppointmentEntryScreen.fxml
@@ -9,83 +9,83 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="445.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cameronm.scheduleconsult.controllers.AppointmentEntryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="553.0" styleClass="input" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cameronm.scheduleconsult.controllers.AppointmentEntryController">
    <children>
-      <Label alignment="CENTER_RIGHT" layoutX="89.0" layoutY="91.0" prefHeight="25.0" prefWidth="34.0" text="ID:">
+      <Label alignment="CENTER_RIGHT" layoutX="82.0" layoutY="64.0" prefHeight="40.0" prefWidth="41.0" text="ID:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <TextField fx:id="titleTextField" layoutX="123.0" layoutY="124.0" prefHeight="25.0" prefWidth="342.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="81.0" layoutY="124.0" prefHeight="25.0" prefWidth="41.0" text="Title:">
+      <TextField fx:id="titleTextField" layoutX="123.0" layoutY="111.0" prefHeight="40.0" prefWidth="365.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="81.0" layoutY="111.0" prefHeight="40.0" prefWidth="41.0" text="Title:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <TextField fx:id="descriptionTextField" layoutX="123.0" layoutY="156.0" prefHeight="25.0" prefWidth="342.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="156.0" prefHeight="25.0" prefWidth="82.0" text="Description:">
+      <TextField fx:id="descriptionTextField" layoutX="123.0" layoutY="157.0" prefHeight="40.0" prefWidth="365.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="157.0" prefHeight="40.0" prefWidth="92.0" text="Description:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <TextField fx:id="appointmentIdTextField" disable="true" editable="false" layoutX="123.0" layoutY="91.0" prefHeight="25.0" prefWidth="82.0" promptText="Auto-Gen" />
-      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="188.0" prefHeight="25.0" prefWidth="82.0" text="Location:">
+      <TextField fx:id="appointmentIdTextField" disable="true" editable="false" layoutX="123.0" layoutY="64.0" prefHeight="40.0" prefWidth="92.0" promptText="Auto-Gen" />
+      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="204.0" prefHeight="40.0" prefWidth="82.0" text="Location:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <TextField fx:id="locationTextField" layoutX="123.0" layoutY="188.0" prefHeight="25.0" prefWidth="342.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="220.0" prefHeight="25.0" prefWidth="82.0" text="Contact:">
+      <TextField fx:id="locationTextField" layoutX="123.0" layoutY="204.0" prefHeight="40.0" prefWidth="365.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="258.0" prefHeight="25.0" prefWidth="82.0" text="Contact:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <ComboBox fx:id="contactComboBox" layoutX="123.0" layoutY="220.0" prefHeight="25.0" prefWidth="197.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="251.0" prefHeight="25.0" prefWidth="82.0" text="Type:">
+      <ComboBox fx:id="contactComboBox" editable="true" layoutX="123.0" layoutY="249.0" prefHeight="40.0" prefWidth="197.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="302.0" prefHeight="25.0" prefWidth="82.0" text="Type:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <TextField fx:id="typeTextField" layoutX="123.0" layoutY="251.0" prefHeight="25.0" prefWidth="342.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="283.0" prefHeight="25.0" prefWidth="82.0" text="Start Date:">
+      <TextField fx:id="typeTextField" layoutX="123.0" layoutY="295.0" prefHeight="40.0" prefWidth="365.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="340.0" prefHeight="40.0" prefWidth="82.0" text="Start Date:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <DatePicker fx:id="startDatePicker" editable="false" layoutX="123.0" layoutY="283.0" onAction="#startDatePickerSelected" prefHeight="25.0" prefWidth="150.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="282.0" layoutY="283.0" prefHeight="25.0" prefWidth="34.0" text="Time:">
+      <DatePicker fx:id="startDatePicker" editable="false" layoutX="123.0" layoutY="340.0" onAction="#startDatePickerSelected" prefHeight="40.0" prefWidth="150.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="282.0" layoutY="340.0" prefHeight="40.0" prefWidth="56.0" text="Time:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <ComboBox fx:id="startTimeComboBox" layoutX="316.0" layoutY="283.0" onAction="#startTimeComboBoxSelected" prefWidth="150.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="315.0" prefHeight="25.0" prefWidth="82.0" text="End Date:">
+      <ComboBox fx:id="startTimeComboBox" layoutX="339.0" layoutY="340.0" onAction="#startTimeComboBoxSelected" prefHeight="40.0" prefWidth="150.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="386.0" prefHeight="40.0" prefWidth="82.0" text="End Date:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <DatePicker fx:id="endDatePicker" editable="false" layoutX="123.0" layoutY="315.0" onAction="#endDatePickerSelected" prefHeight="25.0" prefWidth="150.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="282.0" layoutY="315.0" prefHeight="25.0" prefWidth="34.0" text="Time:">
+      <DatePicker fx:id="endDatePicker" editable="false" layoutX="123.0" layoutY="386.0" onAction="#endDatePickerSelected" prefHeight="40.0" prefWidth="150.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="282.0" layoutY="386.0" prefHeight="40.0" prefWidth="56.0" text="Time:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <ComboBox fx:id="endTimeComboBox" layoutX="316.0" layoutY="315.0" onAction="#endTimeComboBoxSelected" prefWidth="150.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="41.0" layoutY="349.0" prefHeight="25.0" prefWidth="82.0" text="Customer ID:">
+      <ComboBox fx:id="endTimeComboBox" layoutX="339.0" layoutY="386.0" onAction="#endTimeComboBoxSelected" prefHeight="40.0" prefWidth="150.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="30.0" layoutY="430.0" prefHeight="40.0" prefWidth="92.0" text="Customer ID:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <TextField fx:id="customerIdTextField" layoutX="123.0" layoutY="349.0" prefHeight="25.0" prefWidth="82.0" />
-      <Label alignment="CENTER_RIGHT" layoutX="41.0" layoutY="382.0" prefHeight="25.0" prefWidth="82.0" text="User ID:">
+      <TextField fx:id="customerIdTextField" layoutX="123.0" layoutY="432.0" prefHeight="40.0" prefWidth="82.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="40.0" layoutY="476.0" prefHeight="40.0" prefWidth="82.0" text="User ID:">
          <padding>
             <Insets right="5.0" />
          </padding>
       </Label>
-      <TextField fx:id="userIdTextField" layoutX="123.0" layoutY="382.0" prefHeight="25.0" prefWidth="82.0" />
-      <Button fx:id="saveButton" layoutX="316.0" layoutY="382.0" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="25.0" prefWidth="67.0" text="Save" />
-      <Button fx:id="cancelButton" layoutX="401.0" layoutY="382.0" mnemonicParsing="false" onAction="#cancelButtonClicked" prefHeight="25.0" prefWidth="67.0" text="Cancel" />
-      <Label layoutX="49.0" prefHeight="90.0" prefWidth="342.0" text="Appointment">
+      <TextField fx:id="userIdTextField" layoutX="123.0" layoutY="476.0" prefHeight="40.0" prefWidth="82.0" />
+      <Button fx:id="saveButton" layoutX="342.0" layoutY="476.0" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="40.0" prefWidth="67.0" text="Save" />
+      <Button fx:id="cancelButton" layoutX="421.0" layoutY="476.0" mnemonicParsing="false" onAction="#cancelButtonClicked" prefHeight="40.0" prefWidth="67.0" text="Cancel" />
+      <Label alignment="CENTER" layoutX="217.0" prefHeight="111.0" prefWidth="336.0" style="-fx-font-size: 35;" text="Appointment">
          <font>
             <Font size="24.0" />
          </font>
