--- a/src/main/resources/com/cameronm/scheduleconsult/fxml/MainScreen.fxml
+++ b/src/main/resources/com/cameronm/scheduleconsult/fxml/MainScreen.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -24,7 +23,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cameronm.scheduleconsult.controllers.MainController">
+<VBox prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cameronm.scheduleconsult.controllers.MainController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -43,7 +42,7 @@
         </Menu>
       </menus>
     </MenuBar>
-      <TabPane fx:id="mainTabPane" focusTraversable="false" prefHeight="672.0" prefWidth="1280.0" side="RIGHT" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="20.0" tabMaxWidth="200.0" tabMinHeight="10.0" tabMinWidth="200.0" VBox.vgrow="ALWAYS">
+      <TabPane fx:id="mainTabPane" focusTraversable="false" prefHeight="698.0" prefWidth="1498.0" side="RIGHT" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="20.0" tabMaxWidth="200.0" tabMinHeight="10.0" tabMinWidth="200.0" VBox.vgrow="ALWAYS">
         <tabs>
           <Tab closable="false" text="Appointments">
                <content>
@@ -51,18 +50,18 @@
                      <children>
                         <BorderPane layoutX="375.0" layoutY="302.0" prefHeight="552.0" prefWidth="870.6666666666666" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <center>
-                              <TableView fx:id="appointmentTableView" focusTraversable="false" prefHeight="576.0" prefWidth="1255.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
+                              <TableView fx:id="appointmentTableView" focusTraversable="false" prefHeight="576.0" prefWidth="1255.0" BorderPane.alignment="CENTER">
                                 <columns>
-                                  <TableColumn fx:id="idAppointmentTableColumn" editable="false" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Appointment ID" />
-                                    <TableColumn fx:id="titleAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="228.0" text="Title" />
-                                    <TableColumn fx:id="descriptionAppointmentTableColumn" editable="false" minWidth="130.0" prefWidth="343.99993896484375" text="Description" />
-                                    <TableColumn fx:id="locationAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="256.666748046875" text="Location" />
-                                    <TableColumn fx:id="contactAppointmentTableColumn" editable="false" minWidth="-Infinity" prefWidth="160.0" text="Contact" />
+                                  <TableColumn fx:id="idAppointmentTableColumn" editable="false" maxWidth="155.33331298828125" minWidth="40.0" prefWidth="44.6666259765625" text="ID" />
+                                    <TableColumn fx:id="titleAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="187.3333740234375" text="Title" />
+                                    <TableColumn fx:id="descriptionAppointmentTableColumn" editable="false" minWidth="130.0" prefWidth="500.0" text="Description" />
+                                    <TableColumn fx:id="locationAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="100.66650390625" text="Location" />
+                                    <TableColumn fx:id="contactAppointmentTableColumn" editable="false" minWidth="-Infinity" prefWidth="74.666748046875" text="Contact" />
                                     <TableColumn fx:id="typeAppointmentTableColumn" editable="false" minWidth="7.3333740234375" prefWidth="228.0" text="Type" />
-                                    <TableColumn fx:id="startAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="200.0" text="Start Date &amp; Time" />
-                                    <TableColumn fx:id="endAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="200.0" text="End Date &amp; Time" />
-                                    <TableColumn fx:id="customerIdAppointmentTableColumn" editable="false" maxWidth="84.0" minWidth="84.0" prefWidth="84.0" text="Customer ID" />
-                                    <TableColumn fx:id="userIdAppointmentTableColumn" editable="false" maxWidth="70.0" minWidth="70.0" prefWidth="70.0" text="User ID" />
+                                    <TableColumn fx:id="startAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="142.666748046875" text="Start Time" />
+                                    <TableColumn fx:id="endAppointmentTableColumn" editable="false" minWidth="100.0" prefWidth="173.333251953125" text="End Time" />
+                                    <TableColumn fx:id="customerIdAppointmentTableColumn" editable="false" maxWidth="100.0" minWidth="60.0" prefWidth="96.666748046875" text="Cust ID" />
+                                    <TableColumn fx:id="userIdAppointmentTableColumn" editable="false" maxWidth="105.0" minWidth="60.0" prefWidth="60.0" resizable="false" text="User ID" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -70,7 +69,7 @@
                               </TableView>
                            </center>
                            <top>
-                              <FlowPane alignment="TOP_RIGHT" prefHeight="13.0" prefWidth="1255.0" BorderPane.alignment="CENTER">
+                              <FlowPane alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="1220.0" BorderPane.alignment="CENTER">
                                  <children>
                                     <Label fx:id="appointmentFilterIntervalLabel" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="52.0" text="Interval:" visible="false">
                                        <font>
@@ -90,8 +89,7 @@
                                        </padding>
                                     </Label>
                                     <ComboBox fx:id="appointmentFilterYearComboBox" prefHeight="25.0" prefWidth="80.0" visible="false" />
-                                    <Separator orientation="VERTICAL" prefHeight="34.0" prefWidth="59.0" />
-                                    <RadioButton fx:id="appointmentFilterWeekRadioButton" mnemonicParsing="false" prefHeight="17.0" prefWidth="108.0" text="Filter By Week">
+                                    <RadioButton fx:id="appointmentFilterWeekRadioButton" mnemonicParsing="false" prefHeight="21.0" prefWidth="156.0" text="Filter By Week">
                                        <opaqueInsets>
                                           <Insets />
                                        </opaqueInsets>
@@ -99,8 +97,8 @@
                                           <ToggleGroup fx:id="appointmentFilterToggleGroup" />
                                        </toggleGroup>
                                     </RadioButton>
-                                    <RadioButton fx:id="appointmentFilterMonthRadioButton" mnemonicParsing="false" prefHeight="17.0" prefWidth="113.0" text="Filter By Month" toggleGroup="$appointmentFilterToggleGroup" />
-                                    <RadioButton fx:id="appointmentFilterShowAllRadioButton" mnemonicParsing="false" prefHeight="17.0" prefWidth="70.0" selected="true" text="Show All" toggleGroup="$appointmentFilterToggleGroup" />
+                                    <RadioButton fx:id="appointmentFilterMonthRadioButton" mnemonicParsing="false" prefHeight="21.0" prefWidth="160.0" text="Filter By Month" toggleGroup="$appointmentFilterToggleGroup" />
+                                    <RadioButton fx:id="appointmentFilterShowAllRadioButton" mnemonicParsing="false" prefHeight="21.0" prefWidth="100.0" selected="true" text="Show All" toggleGroup="$appointmentFilterToggleGroup" />
                                  </children>
                                  <BorderPane.margin>
                                     <Insets right="30.0" />
@@ -110,7 +108,7 @@
                            <bottom>
                               <ButtonBar focusTraversable="false" prefHeight="40.0" prefWidth="1001.0" BorderPane.alignment="CENTER">
                                 <buttons>
-                                  <Button fx:id="createNewAppointmentButton" mnemonicParsing="false" text="Create New" />
+                                  <Button fx:id="createNewAppointmentButton" mnemonicParsing="false" prefHeight="33.0" prefWidth="146.0" text="Create New" />
                                     <Button fx:id="modifyAppointmentButton" mnemonicParsing="false" text="Modify" />
                                     <Button fx:id="deleteAppointmentButton" mnemonicParsing="false" text="Delete" />
                                 </buttons>
@@ -133,9 +131,9 @@
                      <children>
                         <BorderPane layoutX="375.0" layoutY="302.0" prefHeight="552.0" prefWidth="870.6666666666666" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <center>
-                              <TableView fx:id="customerTableView" focusTraversable="false" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
+                              <TableView fx:id="customerTableView" focusTraversable="false" BorderPane.alignment="CENTER">
                                  <columns>
-                                    <TableColumn fx:id="idCustomerTableColumn" prefWidth="49.33331298828125" text="ID" />
+                                    <TableColumn fx:id="idCustomerTableColumn" prefWidth="10.0" text="ID" />
                                     <TableColumn fx:id="nameCustomerTableColumn" minWidth="7.3333740234375" prefWidth="225.33331298828125" text="Name" />
                                     <TableColumn fx:id="addressCustomerTableColumn" minWidth="7.3333740234375" prefWidth="432.0" text="Address" />
                                     <TableColumn fx:id="divisionCustomerTableColumn" minWidth="7.3333740234375" prefWidth="210.0" text="Division" />
@@ -150,9 +148,9 @@
                            <bottom>
                               <ButtonBar focusTraversable="false" prefHeight="40.0" prefWidth="1255.0" BorderPane.alignment="CENTER">
                                  <buttons>
-                                    <Button fx:id="addCustomerButton" mnemonicParsing="false" text="Add" />
+                                    <Button fx:id="addCustomerButton" mnemonicParsing="false" prefHeight="33.0" prefWidth="107.0" text="Add" />
                                     <Button fx:id="modifyCustomerButton" mnemonicParsing="false" text="Modify" />
-                                    <Button fx:id="deleteCustomerButton" mnemonicParsing="false" text="Delete" />
+                                    <Button fx:id="deleteCustomerButton" mnemonicParsing="false" prefHeight="33.0" prefWidth="147.0" text="Delete" />
                                  </buttons>
                                  <opaqueInsets>
                                     <Insets />
